<resources>
    <string name="app_name">AssistDoctor</string>
    <string name="enjoy">enjoy</string>
    <string name="token">Token</string>
    <string name="password">Password</string>
    <string name="don_t_have_a_token">Don\'t have a token?</string>
    <string name="request_one">Request one.</string>
    <string name="type_msg">Type a message</string>
    <string name="dialog_title">Doctor Assistance</string>
    <string name="dialog_footer">Request the access token with the doctor who is sharing exam.</string>
    <string name="invalid_token">The token is invalid.</string>
    <string name="ok">OK</string>
</resources>
