<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/test_com"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.tcc.iago.assistdoctor.views.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textStyle="bold|italic"
            android:textSize="30sp"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_login"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:src="@drawable/icon_key_code"/>

            <EditText
                android:id="@+id/editText1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:singleLine="true"
                android:background="@color/transparent"
                android:textStyle="bold"
                android:textColorHint="@color/white"
                android:hint="@string/token" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@color/light_gray"></LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:layout_margin="5dp"
                android:src="@drawable/ic_password"/>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:background="@color/transparent"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:hint="@string/password" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_marginTop="30dp"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/login_btn_enjoy"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@drawable/shape_button_enjoy"
            android:textColor="@color/transparent_1"
            android:textStyle="bold"
            android:text="@string/enjoy"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="300dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:layout_marginRight="5dp"
            android:text="@string/don_t_have_a_token"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/request_one"/>

    </LinearLayout>





</LinearLayout>
